# task-manager-api

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  tasks.db  test_tasks.db
app/: bot.py  bot_utils.py  crud.py  database.py  main.py  models.py  schemas.py
app/services/: tasks.py  users.py
apps/: __init__.py
apps/backend/app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/backend/app/services/: tasks.py  users.py
apps/backend/tests/: conftest.py  test_tasks.py
apps/shared/: __init__.py  env.py  task_manager_client.py
apps/telegram_bot/app/: __init__.py  bot_utils.py  config.py  flow_utils.py  keyboards.py  main.py  states.py
apps/telegram_bot/tests/: test_bot_utils.py
apps/vk_client/: __init__.py
apps/vk_client/app/: __init__.py  config.py  main.py  session_store.py
apps/vk_client/tests/: __init__.py  test_session_store.py
tests/: conftest.py  test_bot.py  test_tasks.py
