[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "app>=0.0.1",
    "automium-web>=0.1.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
